--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,7 +10,7 @@
 
 <div layout:fragment="content">
     <div style="border:1px solid red">
-        index.html 입니다. 즉 컨텐츠 영역
+        index.html 입니다. 즉 컨텐츠 영역 다시
     </div>
 </div>
 </html>
