초기 레이아웃 구현중

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,7 +1,152 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
-<footer th:fragment="footerFragment">
+<footer th:fragment="footerFragment" style="padding: 0 0 72px; background: #333; height: 260px;">
     <div style="border:1px solid gold">
         Footer 영역입니다.
     </div>
+    <div class="footer-inner" style="margin: 0; padding: 0; border: 0; vertical-align: baseline;
+    -webkit-font-smoothing: antialiased; box-sizing: border-box; -webkit-box-sizing: border-box;">
+        <div class="footer-menu" style="padding: 22px 0; border-bottom: 1px solid #3d3d3d;">
+            <div class="inner frame-mid">
+                <ul class="footer-menu-list" style="margin: 0; padding: 0; border: 0;
+                vertical-align: baseline; -webkit-font-smoothing: antialiased;
+                box-sizing: border-box; -webkit-box-sizing: border-box;">
+                    <li><a href="/individual_information_process_policy"><span class="menu">개인정보처리방침</span></a></li>
+                    <li><a href="/email_without_notice_colct_reject"><span>이메일주소무단수집거부</span></a></li>
+                    <li><a href="http://as82.kr/kbiz/" target="_blank"><span>원격연결</span></a></li>
+                    <li><a href="/sitemap"><span>사이트맵</span></a></li>
+                    <li><a href="/certification_business"><span>인증사업소개</span></a></li>
+                </ul>
+                <div class="footer-selects">
+                    <div class="select-box footer-custom">
+                        <button type="button" title="관련사이트 선택" class="select-value placeholder"
+                                style="display: block; width: 100%; border-radius: 18px; text-align: left;
+                                line-height: 34px; font-size: 14px; border: 1px solid #666; color: #999;">
+                            <span>관련사이트</span>
+                        </button>
+                        <div class="select-list">
+                            <ul>
+                                <li><a href="https://www.smes.go.kr/index" target="_blank"><span>중소벤처24</span></a></li>
+                                <li><a href="https://www.osmb.go.kr/" target="_blank"><span>중소기업옴부즈만홈페이지</span></a></li>
+                                <li><a href="https://www.bizinfo.go.kr/" target="_blank"><span>기업마당</span></a></li>
+                                <li><a href="https://www.k-startup.go.kr/main.do"
+                                       target="_blank"><span>K-스타트업</span></a></li>
+                                <li><a href="http://www.sbiz.or.kr/sup/sbiz_help/index.jsp"
+                                       target="_blank"><span>소상공인마당</span></a></li>
+                                <li><a href="https://sminfo.mss.go.kr/cm/sv/CSV001R0.do" target="_blank"><span>중소기업현황 정보시스템</span></a>
+                                </li>
+                                <li><a href="https://www.smpp.go.kr/smpp/index.do"
+                                       target="_blank"><span>공공구매종합정보망</span></a></li>
+                                <li><a href="http://www.exportcenter.go.kr/main.jsp"
+                                       target="_blank"><span>중소기업수출지원센터</span></a></li>
+                                <li><a href="https://www.smtech.go.kr/front/main/main.do" target="_blank"><span>중소기업기술개발종합과제관리시스템</span></a>
+                                </li>
+                                <li><a href="https://www.startbiz.go.kr/index.do"
+                                       target="_blank"><span>온라인법인설립시스템</span></a></li>
+                                <li><a href="https://www.smart-factory.kr/"
+                                       target="_blank"><span>스마트공장사업관리시스템</span></a></li>
+                                <li><a href="http://www.rfz.go.kr/" target="_blank"><span>규제자유특구</span></a></li>
+                                <li><a href="http://csr.kbiz.or.kr/" target="_blank"><span>중소기업사랑나눔재단</span></a></li>
+                                <li><a href="http://sps.kbiz.or.kr/portal/default/kbizMain.page" target="_blank"><span>단체표준인증 종합포털</span></a>
+                                </li>
+                                <li><a href="https://www.kbizamp.or.kr/" target="_blank"><span>KBIZ AMP</span></a></li>
+                                <li><a href="https://www.sbhrdc.re.kr/" target="_blank"><span>중소기업인력개발원</span></a></li>
+                                <li><a href="http://sbgc.kbiz.or.kr/html/" target="_blank"><span>중소기업DMC타워</span></a>
+                                </li>
+                                <li><a href="http://sbcc.kbiz.or.kr/html/" target="_blank"><span>중소기업중앙회관(임대)</span></a>
+                                </li>
+                                <li><a href="http://www.successbiz.or.kr/index.do" target="_blank"><span>가업승계지원센터</span></a>
+                                </li>
+                                <li><a href="https://www.kbiz.or.kr/ko/contents/contents/contents.do?mnSeq=363"
+                                       target="_blank"><span>중우회</span></a></li>
+                            </ul>
+                        </div>
+                    </div><!--// select-box -->
+                </div><!--// footer-selects -->
+            </div>
+        </div>
+        <div class="footer-info frame-mid"
+             style="padding: 29px 0 0; position: relative; max-width: 1280px; margin: 0 auto;">
+            <div class="inner">
+                <strong class="footer-logo"><img alt="참 괜찮은 중소기업" src="https://jp.kbiz.or.kr/images/icon/footer_logo.png"/></strong>
+                <div class="footer-address">
+                    <address><span class="tit">주소</span>07242 서울시 영등포구 은행로 30 (여의도동) 중소기업중앙회</address>
+                    <ul class="footer-addr-list">
+                        <li><span class="tit">TEL</span><span class="txt">02-2124-3000</span></li>
+                        <li><span class="tit">E-mail</span><span class="txt">kbiz_job@kbiz.or.kr</span></li>
+                    </ul>
+                    <p class="copy">Copyright (c) 2020 KBIZ All rights Reserved.</p>
+                </div>
+                <div class="right-inst">
+                    <ul>
+                        <li><img src="/images/icon/footer_inst_logo.png" alt="중소벤처기업부"/></li>
+                        <li><img src="/images/icon/footer_inst_logo2.png" alt="KBIZ 중소기업중앙회"/></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
 </footer>
+<!--<footer id="footer" class="footer">
+    <div class="footer-inner">
+        <div class="footer-menu">
+            <div class="inner frame-mid">
+                <ul class="footer-menu-list">
+                    <li><a href="/individual_information_process_policy"><span class="menu">개인정보처리방침</span></a></li>
+                    <li><a href="/email_without_notice_colct_reject"><span>이메일주소무단수집거부</span></a></li>
+                    <li><a href="http://as82.kr/kbiz/" target="_blank"><span>원격연결</span></a></li>
+                    <li><a href="/sitemap"><span>사이트맵</span></a></li>
+                    <li><a href="/certification_business"><span>인증사업소개</span></a></li>
+                </ul>
+                <div class="footer-selects">
+                    <div class="select-box footer-custom">
+                        <button type="button" title="관련사이트 선택" class="select-value placeholder"><span>관련사이트</span></button>
+                        <div class="select-list">
+                            <ul>
+                                <li><a href="https://www.smes.go.kr/index" target="_blank"><span>중소벤처24</span></a></li>
+                                <li><a href="https://www.osmb.go.kr/" target="_blank"><span>중소기업옴부즈만홈페이지</span></a></li>
+                                <li><a href="https://www.bizinfo.go.kr/" target="_blank"><span>기업마당</span></a></li>
+                                <li><a href="https://www.k-startup.go.kr/main.do" target="_blank"><span>K-스타트업</span></a></li>
+                                <li><a href="http://www.sbiz.or.kr/sup/sbiz_help/index.jsp" target="_blank"><span>소상공인마당</span></a></li>
+                                <li><a href="https://sminfo.mss.go.kr/cm/sv/CSV001R0.do" target="_blank"><span>중소기업현황 정보시스템</span></a></li>
+                                <li><a href="https://www.smpp.go.kr/smpp/index.do" target="_blank"><span>공공구매종합정보망</span></a></li>
+                                <li><a href="http://www.exportcenter.go.kr/main.jsp" target="_blank"><span>중소기업수출지원센터</span></a></li>
+                                <li><a href="https://www.smtech.go.kr/front/main/main.do" target="_blank"><span>중소기업기술개발종합과제관리시스템</span></a></li>
+                                <li><a href="https://www.startbiz.go.kr/index.do" target="_blank"><span>온라인법인설립시스템</span></a></li>
+                                <li><a href="https://www.smart-factory.kr/" target="_blank"><span>스마트공장사업관리시스템</span></a></li>
+                                <li><a href="http://www.rfz.go.kr/" target="_blank"><span>규제자유특구</span></a></li>
+                                <li><a href="http://csr.kbiz.or.kr/" target="_blank"><span>중소기업사랑나눔재단</span></a></li>
+                                <li><a href="http://sps.kbiz.or.kr/portal/default/kbizMain.page" target="_blank"><span>단체표준인증 종합포털</span></a></li>
+                                <li><a href="https://www.kbizamp.or.kr/" target="_blank"><span>KBIZ AMP</span></a></li>
+                                <li><a href="https://www.sbhrdc.re.kr/" target="_blank"><span>중소기업인력개발원</span></a></li>
+                                <li><a href="http://sbgc.kbiz.or.kr/html/" target="_blank"><span>중소기업DMC타워</span></a></li>
+                                <li><a href="http://sbcc.kbiz.or.kr/html/" target="_blank"><span>중소기업중앙회관(임대)</span></a></li>
+                                <li><a href="http://www.successbiz.or.kr/index.do" target="_blank"><span>가업승계지원센터</span></a></li>
+                                <li><a href="https://www.kbiz.or.kr/ko/contents/contents/contents.do?mnSeq=363" target="_blank"><span>중우회</span></a></li>
+                            </ul>
+                        </div>
+                    </div>&lt;!&ndash;// select-box &ndash;&gt;
+                </div>&lt;!&ndash;// footer-selects &ndash;&gt;
+            </div>
+        </div>
+        <div class="footer-info frame-mid">
+            <div class="inner">
+                <strong class="footer-logo"><img alt="참 괜찮은 중소기업" src="/images/icon/footer_logo.png" /></strong>
+                <div class="footer-address">
+                    <address><span class="tit">주소</span>07242 서울시 영등포구 은행로 30 (여의도동) 중소기업중앙회</address>
+                    <ul class="footer-addr-list">
+                        <li><span class="tit">TEL</span><span class="txt">02-2124-3000</span></li>
+                        <li><span class="tit">E-mail</span><span class="txt">kbiz_job@kbiz.or.kr</span></li>
+                    </ul>
+                    <p class="copy">Copyright (c) 2020 KBIZ All rights Reserved.</p>
+                </div>
+                <div class="right-inst">
+                    <ul>
+                        <li><img src="/images/icon/footer_inst_logo.png" alt="중소벤처기업부" /></li>
+                        <li><img src="/images/icon/footer_inst_logo2.png" alt="KBIZ 중소기업중앙회" /></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>-->
 </html>
