레이아웃 변경

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,5 +1,5 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
-<header th:fragment="hederFragment">
+<header th:fragment="headerFragment">
     <div class="header-wrap">
         <div class="header-inner">
             <h1 class="logo">
@@ -15,7 +15,7 @@
                     </li>
                     <li><a href="/faq">FAQ</a></li>
                     <!--<li><a href="/platform_introduction">플랫폼 소개</a></li>-->
-                    <li class="not-line"><a href="/biz/login"><i class="ico-biz-home"></i> 기업회원 홈</a></li>
+                    <li class="not-line"><a href="/biz/login"><i class="ico-biz-home"></i>기업회원 홈</a></li>
                 </ul>
             </div><!-- ## Gnb영역 -->
             <nav id="gnb" class="gnb-wrap">
@@ -23,10 +23,7 @@
                     <li>
                         <!--// 활성화시 li addClass active -->
                         <a href="/map/smart_employment">
-                            <span>
-                                지도에서 찾기
-
-                            </span>
+                            <span>지도에서 찾기</span>
                         </a>
                         <div class="lnb-inner">
                             <div class="lnb-list">
