--- a/src/main/resources/templates/layouts/layout.html
+++ b/src/main/resources/templates/layouts/layout.html
@@ -7,7 +7,7 @@
         <head th:replace="fragments/config :: configFragment"></head>
     </div>
 
-    <header th:replace="fragments/header :: hederFragment"></header>
+    <header th:replace="fragments/header :: headerFragment"></header>
 
     <div layout:fragment="content"></div>
 
